modificacion de EMM

--- a/ExponentialMixtureModel.ipynb
+++ b/ExponentialMixtureModel.ipynb
@@ -21,90 +21,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "class ExponentialMixtureModel():\n",
-    "    def __init__(self,k,max_iter=100, tol=1e-6):\n",
-    "        #Cantidad de Clusters\n",
-    "        self.k = k\n",
-    "        #Maxima cantidad de iteraciones que el algoritmo va a hacr\n",
-    "        self.max_iter = max_iter\n",
-    "        #Tolerancia que utilizará el algoritmo para comprar entre los log-likelihood\n",
-    "        self.tol = tol\n",
-    "        #Vector de Pi's/ pesos de cada feature\n",
-    "        self.weight = None\n",
-    "        self.parametro = None\n",
+    "    def __init__(self, k, max_iter=100, tol=1e-6):\n",
+    "        self.k = k  # Número de clusters\n",
+    "        self.max_iter = max_iter  # Máximo número de iteraciones\n",
+    "        self.tol = tol  # Tolerancia para la convergencia\n",
+    "        self.weights = None  # Pesos de cada cluster\n",
+    "        self.lambdas = None  # Parámetros lambda de cada cluster\n",
     "\n",
-    "    \n",
-    "    def initialize_parameters(self,X): #Inicialización de los parámetros de forma random\n",
-    "        n_samples= X.shape[0]\n",
-    "        #Se fija los pesos de forma uniforme\n",
-    "        self.weight=np.full(self.k, 1/ n_samples)\n",
-    "        self.parametro = np.array([np.random.uniform(0, 10),np.random.uniform(0, 10)])\n",
+    "    def _prepare_data(self, X):\n",
+    "        \"\"\"Convierte X en una matriz 2D si es necesario, para que tenga siempre la forma (n_samples, n_features).\"\"\"\n",
+    "        if isinstance(X, pd.DataFrame):\n",
+    "            return X.values\n",
+    "        elif X.ndim == 1:\n",
+    "            return X.reshape(-1, 1)\n",
+    "        return X\n",
     "\n",
+    "    def initialize_parameters(self, X):\n",
+    "        X = self._prepare_data(X)\n",
+    "        n_samples, n_features = X.shape\n",
+    "        # Inicializar pesos uniformemente\n",
+    "        self.weights = np.full(self.k, 1 / self.k)\n",
+    "        # Inicializar lambdas aleatoriamente\n",
+    "        self.lambdas = np.random.uniform(1, 10, (self.k, n_features))\n",
+    "        print(\"Pesos iniciales:\", self.weights)\n",
+    "        print(\"Parámetros iniciales (lambdas):\", self.lambdas)\n",
     "\n",
-    "    def e_step(self,X): #En este paso se calcula la probabilidad de pertenecer al cluster=j dado las X ponderandolas \n",
-    "                        #por el peso de cada cluster, inicializado anteriormanete. \n",
-    "                        # Es una regla de bayes ponderada con la exponencial como fx\n",
-    "        n_samples = X.shape[0]\n",
-    "        #Generamos la matriz de respuesta del e-step con todos 0.\n",
-    "        #La matriz es de n x k \n",
+    "    def e_step(self, X):\n",
+    "        #En este paso se calcula la probabilidad de pertenecer al cluster=j dado las X ponderándolas \n",
+    "        #por el peso de cada cluster, inicializado anteriormente. \n",
+    "        # Es una regla de bayes ponderada con la exponencial como fx\n",
+    "        X = self._prepare_data(X)\n",
+    "        n_samples, n_features = X.shape\n",
     "        self.e_return = np.zeros((n_samples, self.k))\n",
-    "        #Suma de 1 a k clusters de \n",
     "        for k in range(self.k):\n",
-    "            self.e_return[:, k] = self.weight[k] * self.parametro[k] * np.exp(-self.parametro[k] * X)\n",
-    "        #Normalización de las probabilidad para que la proababilidad de cada observación de pertenecer a cada k sume 1\n",
-    "        self.e_return = self.e_return / self.e_return.sum(axis=1, keepdims=True) \n",
+    "            # Calcular la probabilidad de pertenencia a cada cluster\n",
     "\n",
-    "    \n",
-    "    def m_step(self,X):\n",
-    "        n_samples= X.shape[0]\n",
-    "        #Actualización de los pesos dados los parámetros. Se hace una suma de 1 a k y de todas las filas\n",
+    "            probs = self.weights[k] * np.prod(self.lambdas[k] * np.exp(-self.lambdas[k] * X), axis=1)\n",
+    "            probs = np.where(probs < 1e-10, 1e-10, probs)  # Evitar cero\n",
+    "            self.e_return[:, k] = probs\n",
+    "        # Normalizar las probabilidades para que sumen 1 por observación\n",
+    "        self.e_return = self.e_return / self.e_return.sum(axis=1, keepdims=True)\n",
+    "        if np.any(np.isnan(self.e_return)):\n",
+    "            print(\"Advertencia: NaNs encontrados en la matriz de probabilidad después del paso E.\")\n",
+    "\n",
+    "    def m_step(self, X):\n",
+    "        X = self._prepare_data(X)\n",
+    "        n_samples, n_features = X.shape\n",
+    "            #Se obtiene la suma de wij que es la probabilidad condicional normalizada obtenida en el e_step \n",
+    "            # y se la divide por n\n",
+    "            #Se debe iterar por la cantidad K y cantidad de features\n",
     "        for k in range(self.k):\n",
-    "            #Se obtiene la suma de wij que es la probabilidad codicional normalizada obtenida en el e_step y se la dividie por n\n",
-    "            #Se tiene que obtener tantos \n",
+    "            resp_sum = np.sum(self.e_return[:, k])\n",
+    "            self.weights[k] = resp_sum / n_samples\n",
+    "            for j in range(n_features):\n",
+    "                #La suma ponderada de cada valor de observación en cada feature por la probabilidad de pertenecer a esa clase\n",
+    "                weighted_sum = np.sum(self.e_return[:, k] * X[:, j])\n",
+    "                if weighted_sum == 0:\n",
+    "                    self.lambdas[k, j] = 1e-6  # Corrección para evitar división por cero\n",
+    "                else:\n",
+    "                    #Se divide l\n",
+    "                    self.lambdas[k, j] = resp_sum / weighted_sum\n",
+    "        if np.any(np.isnan(self.weights)) or np.any(np.isnan(self.lambdas)):\n",
+    "            print(\"Advertencia: NaNs encontrados en los pesos o parámetros después del paso M.\")\n",
     "\n",
-    "            self.weight[k]= np.sum(self.e_return[:,k]) / n_samples\n",
-    "            #Una vez que tenemos los pesos actualizamos el parámetro lambda\n",
-    "            self.parametro[k] = np.sum(self.e_return[:,k])  / np.sum(self.e_return[:, k] * X)\n",
-    "\n",
-    "    \n",
-    "    def fit(self,X):\n",
-    "         self.initialize_parameters(X)\n",
-    "         log_likelhood_old= 0.0\n",
-    "         for i in range(self.max_iter):\n",
-    "            self.e_step(X)  # Calcular las probabilidades de que cada observación pertenezca a k=j clase--> Paso E\n",
-    "            self.m_step(X)  # Actualizar los parámetros --> Paso M\n",
-    "            # Calcular la log-verosimilitud\n",
-    "            log_likelihood = np.sum(np.log(np.sum(self.e_return, axis=1)))\n",
-    "            if np.abs(log_likelihood - log_likelhood_old) < self.tol:\n",
+    "    def fit(self, X):\n",
+    "        X = self._prepare_data(X)\n",
+    "        self.initialize_parameters(X)\n",
+    "        log_likelihood_old = -np.inf\n",
+    "        for i in range(self.max_iter):\n",
+    "            self.e_step(X)  # Paso E\n",
+    "            self.m_step(X)  # Paso M\n",
+    "            # Calcular log-verosimilitud\n",
+    "            log_likelihood = np.sum(np.log(np.sum(self.e_return, axis=1) + 1e-10))  # Corrección para evitar log(0)\n",
+    "            if np.abs(log_likelihood - log_likelihood_old) < self.tol:\n",
+    "                print(f\"Convergencia alcanzada en la iteración {i}.\")\n",
     "                break\n",
-    "            log_likelhood_old = log_likelihood\n",
+    "            log_likelihood_old = log_likelihood\n",
+    "            print(f\"Iteración {i}, log-likelihood: {log_likelihood}\")\n",
     "\n",
-    "\n",
-    "    \n",
-    "    def predict_proba(self,X): #Calcula las probabilidad de pertenecer a la ultima clase dado la maximización\n",
+    "    def predict_proba(self, X):\n",
+    "        X = self._prepare_data(X)\n",
     "        self.e_step(X)\n",
-    "        \n",
     "        return self.e_return\n",
-    "    \n",
-    "    def predict(self,X): #devuelve la clase con mayor probabilidad para cada observación\n",
     "\n",
-    "\n",
-    "        return np.argmax(self.predict_proba(X), axis=1)\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n"
+    "    def predict(self, X):\n",
+    "        return np.argmax(self.predict_proba(X), axis=1)\n"
    ]
   },
   {
